--- a/overrides/home.html
+++ b/overrides/home.html
@@ -9,7 +9,7 @@
       <img src="assets/background.jpeg" style="display: none;"/>
     </div>
     <div class="md-grid md-typeset">
-      <div class="mdx-hero">
+      <div class="mdx-hero" style="margin-top:-100px">
         <div>
           <h1>Hango云原生网关</h1>
           <div class="home-info">提供服务开放和共享的 PaaS 平台，帮助企业在内部多个系统之间，或者内部系统与合作伙伴以及第三方系统之间实现跨系统、跨协议的服务能力互通。提供服务 API 的全生命周期管理、流量管理和服务治理能力。</div>
