--- a/overrides/home.html
+++ b/overrides/home.html
@@ -12,7 +12,8 @@
       <div class="mdx-hero" style="margin-top:-100px">
         <div>
           <h1>Hango云原生网关</h1>
-          <div class="home-info">提供服务开放和共享的 PaaS 平台，帮助企业在内部多个系统之间，或者内部系统与合作伙伴以及第三方系统之间实现跨系统、跨协议的服务能力互通。提供服务 API 的全生命周期管理、流量管理和服务治理能力。</div>
+          <div class="home-info">Hango是一个基于 Envoy 构建的高性能、可扩展、功能丰富的云原生API网关</div>
+          <div class="home-info">Hango 提供请求代理、动态路由、负载均衡、限流、熔断、健康检查、安全防护等功能，可用于微服务网关、七层负载均衡、Kubernetes Ingress、Serverless网关等应用场景</div>
           <p style="display: flex">
             <a href="{{ 'getting-started/overview/' | url }}" class="md-button md-button--primary newbutton">
               快速上手
