--- a/overrides/home.html
+++ b/overrides/home.html
@@ -33,29 +33,34 @@
     <h2>核心优势</h2>
     <ul class="md-grid">
       <li>
-        <img src="assets/feat-cloudnative.png" />
-        <p class="title">云原生</p>
-        <p class="subtitle">基于云原生标准组件 Envoy 和 Istio 构建，支持水平扩容，无单点故障，可以与服务网格天然集成</p>
-      </li>
-      <li>
-        <img src="assets/feat-traffic-control.png" />
-        <p class="title">全流量管控</p>
-        <p class="subtitle">支持服务级和 API 级精细化流量治理，提供限流、熔断、降级、重试、灰度发布等丰富的流量治理能力</p>
-      </li>
-      <li>
-        <img src="assets/feat-integration.png" />
-        <p class="title">异构融合</p>
-        <p class="subtitle">支持 gRPC、Dubbo、WebService、HTTP RESTFUL 等异构技术栈无缝集成，有效利用业务遗留系统</p>
-      </li>
-      <li>
-        <img src="assets/feat-safe.png" />
-        <p class="title">安全可控</p>
-        <p class="subtitle">使用 IP、Header、UA 黑白名单等机制，有效保护敏感资源访问</p>
+        <img src="assets/feat-tech.png" />
+        <p class="title">技术路线</p>
+        <p class="subtitle">基于领先的网络代理组件Envoy构建,具备丰富的功能、优异的性能与可观测性</p>
       </li>
       <li>
         <img src="assets/feat-flexible.png" />
-        <p class="title">灵活可扩展</p>
-        <p class="subtitle">提供增强级 Lua 扩展框架，基于 WebAssembly 多语言扩展插件，用户可以自由选择插件开发语言</p>
+        <p class="title">扩展性</p>
+        <p class="subtitle">支可用于生产的增强级Lua扩展框架Rider;基于WebAssembly的多语言扩展插件能力(后续提供)</p>
+      </li>
+      <li>
+        <img src="assets/feat-integration.png" />
+        <p class="title">多场景</p>
+        <p class="subtitle">具备支撑微服务网关、七层负载均衡、Kubernetes Ingress, Serverless网关等多种场景能力</p>
+      </li>
+      <li>
+        <img src="assets/feat-cloudnative.png" />
+        <p class="title">云原生</p>
+        <p class="subtitle">以云原生标准数据面组件Envoy作为核心引擎,天然亲和云原生</p>
+      </li>
+      <li>
+        <img src="assets/feat-api-integration.png" />
+        <p class="title">API生态与集成</p>
+        <p class="subtitle">以API为中心的生态管理,提供数百种工业级协议快速集成能力(后续提供)</p>
+      </li>
+      <li>
+        <img src="assets/feat-control.png" />
+        <p class="title">控制平面</p>
+        <p class="subtitle">易用的控制台进行网关、服务、路由等多维度管理,简化使用者操作</p>
       </li>
     </ul>
   </section>
