--- a/overrides/home.html
+++ b/overrides/home.html
@@ -40,7 +40,7 @@
       <li>
         <img src="assets/feat-flexible.png" />
         <p class="title">扩展性</p>
-        <p class="subtitle">支可用于生产的增强级Lua扩展框架Rider;基于WebAssembly的多语言扩展插件能力(后续提供)</p>
+        <p class="subtitle">支可用于生产的增强级Lua扩展框架Rider;基于WebAssembly的多语言扩展插件能力</p>
       </li>
       <li>
         <img src="assets/feat-integration.png" />
@@ -55,7 +55,7 @@
       <li>
         <img src="assets/feat-api-integration.png" />
         <p class="title">API生态与集成</p>
-        <p class="subtitle">以API为中心的生态管理,提供数百种工业级协议快速集成能力(后续提供)</p>
+        <p class="subtitle">以API为中心的生态管理,提供数百种工业级协议快速集成能力</p>
       </li>
       <li>
         <img src="assets/feat-control.png" />
